@@ -36,6 +36,7 @@ dist_pkgdata_DATA = \
   ATLAS_2011_S9131140.info \
   ATLAS_2011_S9108483.info \
   ATLAS_2011_S9212183.info \
+  ATLAS_2011_I894867.info \
   ATLAS_2011_I919017.info \
   ATLAS_2011_I925932.info \
   ATLAS_2011_I926145.info \
