@@ -1,0 +1,7 @@
+# BEGIN PLOT /ATLAS_2011_I894867/d01-x01-y01 
+Title=$\sigma_\text{inel}$ for $\xi > 5 \cdot 10^{-6}$ at $\sqrt{s}=7$ TeV
+XLabel=$\sqrt{s}$ [GeV]
+YLabel=$\sigma_\text{inel}$ [mb]
+YMin=45
+XCustomMajorTicks=7000	7000
+# END PLOT
