@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="ISO-8859-1" ?>
+<!DOCTYPE aida SYSTEM "http://aida.freehep.org/schemas/3.3/aida.dtd">
+<aida version="3.3">
+  <implementation version="1.0" package="LWH"/>
+  <dataPointSet name="d01-x01-y01"
+    title="" path="/REF/ATLAS_2011_I894867" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+    <measurement value="7000.0" errorPlus="0.5" errorMinus="0.5"/>
+    <measurement value="60.33" errorPlus="2.10" errorMinus="2.10"/>
+  </dataPoint>
+  </dataPointSet>
+</aida>
