@@ -36,6 +36,7 @@ dist_pkgdata_DATA = \
   ATLAS_2011_S9126244.aida \
   ATLAS_2011_S9128077.aida \
   ATLAS_2011_S9131140.aida \
+  ATLAS_2011_I894867.aida \
   ATLAS_2011_I919017.aida \
   ATLAS_2011_I925932.aida \
   ATLAS_2011_I926145.aida \
