@@ -63,6 +63,7 @@ RivetATLASAnalyses_la_SOURCES = \
     ATLAS_2011_S9212183.cc \
     ATLAS_2011_S9225137.cc \
     ATLAS_2011_S9019561.cc \
+    ATLAS_2011_I894867.cc \
     ATLAS_2011_I919017.cc \
     ATLAS_2011_I925932.cc \
     ATLAS_2011_I926145.cc \
