@@ -20,6 +20,7 @@
 2012-11-15  Hendrik Hoeth <hendrik.hoeth@cern.ch>
 
 	* Added LHCF_2012_I1115479 analysis
+	* Added ATLAS_2011_I894867 analysis
 
 2012-11-14  Andy Buckley  <andy.buckley@cern.ch>
 
